<resources>
    <string name="app_name">Mosungi</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_accueil">Mosungi</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="sign_up"> S\'inscrire</string>
    <string name="no_acount">Avez vous un compte? </string>
    <string name="name">Nom</string>
    <string name="lastname">Prénom</string>
    <string name="phone">Téléphone</string>
    <string name="mail">Adresse électronique</string>
    <string name="password2">Répéter le même mot de passe</string>
    <string name="patient">Patients</string>
    <string name="agenda">Agenda</string>
    <string name="title_activity_add_patient">Nouveau patient</string>
    <string name="title_activity_add_agenda">Ajouter à l\'agenda</string>
    <string name="date">Date de naissance</string>
    <string name="adresse">Adresse</string>
    <string name="cas">Cas du patient</string>
    <string name="add">Ajouter</string>
    <string name="title_activity_add_meeting">AddMeetingActivity</string>
    <string name="choose_patient">Choisir le patient</string>
    <string name="meeting_date">Choisir la date </string>
    <string name="meeting_hour">Choisir l\'heure</string>
    <string name="calendar_title">Courte descripton</string>
    <string name="motif">Contenu du message à envoyer</string>
    <string name="alert_empty">Veuillez remplir tous les champs</string>
    <string name="alert_phone_format">Numéro de téléphone non valide</string>
    <string name="alert_patient_added">Patient ajouté avec succès</string>
    <string name="alert_patient_updated">Patient mis à jour</string>
    <string name="error_planification_date">Désolé, vous ne pouvez pas planifier un message dans le passé</string>
    <string name="btn_patient_update">mettre à jour</string>
    <string name="send_message">Envoyer un message</string>
    <string name="send">Envoyer</string>
    <string name="cancel">Annuler</string>
    <string name="to">A</string>
    <string name="switch_on">Activé</string>
    <string name="switch_off">Desactivé</string>
    <string name="popup_patient_plan_sms">Planifier un message</string>
    <string name="popup_patient_send_sms">Envoyer un message</string>
    <string name="popup_patient_call">Appeller</string>
    <string name="popup_patient_update">Modifier les infos</string>
    <string name="popup_patient_switch_all_off">Desactiver tout rapel</string>
    <string name="popup_patient_remove_from_groups">Retirer de tout groupe</string>
    <string name="popup_patient_copy_number">Copier le numéro</string>
    <string name="popup_patient_delete">Suprimer patient</string>
    <string name="popup_alarm_switch_off">Desactiver</string>
    <string name="alert_patients_count">Veuillez ajouter un patient avant toute planification !</string>
    <string name="title_activity_settings">Réglages</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_sms_signature_key">pref.signature.key</string>
    <string name="pref_sms_signature_title">Signature</string>
    <string name="pref_sms_default_value">Ex: Dr Fongwama Opensource</string>
    <string name="fab_label_ajout_patient">Ajouter un patient</string>
    <string name="fab_label_ajout_au_calendrier">Ajouter au calendrier</string>
</resources>