<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" android:layout_marginBottom="15dp"
        android:layout_marginTop="@dimen/patient_dialog_margin_top"
        android:clickable="true" android:orientation="horizontal"
        android:paddingBottom="@dimen/patient_dialog_margin_top"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_profile_24dp"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:ellipsize="end" android:maxLines="2"
            android:text="Planifier un message"
            android:textColor="@color/colorSecondaryText" android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addNewAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/patient_dialog_margin_top"
        android:clickable="true" android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"

            android:src="@drawable/ic_alarm_add_black_24dp"
            />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:text="@string/popup_patient_plan_sms"

            android:textColor="@color/colorSecondaryText" android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sendSms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/patient_dialog_margin_top"
        android:clickable="true" android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:src="@drawable/ic_textsms_24dp"

            />

        <TextView
            android:id="@+id/textNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:text="@string/popup_patient_send_sms"
            android:textColor="@color/colorSecondaryText" android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/patient_dialog_margin_top"
        android:clickable="true" android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:src="@drawable/ic_call_black_24dp"
            />

        <TextView
            android:id="@+id/callPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:text="@string/popup_patient_call"
            android:textColor="@color/colorSecondaryText" android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/updatePatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/patient_dialog_margin_top"
        android:clickable="true" android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:src="@drawable/ic_edit_24dp"
            />

        <TextView
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:text="@string/popup_patient_update"
            android:textColor="@color/colorSecondaryText" android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/desactivateAllAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/patient_dialog_margin_top"
        android:clickable="true" android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:src="@drawable/ic_alarm_off_black_24dp"
            />
        <TextView
            android:id="@+id/alarmOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:text="@string/popup_patient_switch_all_off"
            android:textColor="@color/colorSecondaryText" android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/clearAllAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/patient_dialog_margin_top"
        android:alpha="0.6"
        android:clickable="true" android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:src="@drawable/ic_clear_delete_black_24dp"
            />
        <TextView
            android:id="@+id/clearAlarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:text="@string/popup_patient_remove_from_groups"
            android:textColor="@color/colorSecondaryText" android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/copyPatientNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/patient_dialog_margin_top"
        android:alpha="0.6" android:clickable="true" android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:src="@drawable/ic_copy_black_24dp"
            />
        <TextView
            android:id="@+id/copyNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:text="@string/popup_patient_copy_number"
            android:textColor="@color/colorSecondaryText" android:textSize="18sp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/deletePatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/patient_dialog_margin_top"
        android:layout_marginTop="@dimen/patient_dialog_margin_top"
        android:clickable="true" android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:src="@drawable/ic_clear_delete_black_24dp"
            />

        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_dialog_marfin_left"
            android:text="@string/popup_patient_delete"
            android:textColor="@color/colorSecondaryText" android:textSize="18sp"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>